--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/router": "~9.1.7",
     "@ng-bootstrap/ng-bootstrap": "^6.1.0",
     "bootstrap": "^4.4.0",
+    "lodash": "^4.17.15",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -37,6 +38,7 @@
     "@angular/compiler-cli": "~9.1.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/lodash": "^4.14.152",
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "electron": "^9.0.0",
