--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "^4.14.152",
     "@types/node": "^12.11.1",
+    "angular-cli-ghpages": "^0.6.2",
     "codelyzer": "^5.1.2",
     "copyfiles": "^2.3.0",
     "electron": "^9.0.0",
